Pull request #558: mtokar-MCA-5178-rename-chat-fullscreen-error
Merge in MML/infobip-mobile-messaging-android from mtokar-MCA-5178-rename-chat-fullscreen-error to master

Squashed commit of the following:

commit 45f5286cff2f7a3e715b768c59284fb70f5ca2f5
Author: Matus Tokar <Matus.Tokar@infobip.com>
Date:   Wed Jan 21 16:54:47 2026 +0100

    copyright update

commit 793157b79d42cccee9248a3371ca50e6f1eb3cd0
Author: Matus Tokar <Matus.Tokar@infobip.com>
Date:   Wed Jan 21 11:56:17 2026 +0100

    snackbar customization as nullable properties

commit 1e9ca9cbe57d55559275d95e3e4bf46a26a7ecd4
Author: Matus Tokar <Matus.Tokar@infobip.com>
Date:   Wed Jan 21 11:06:21 2026 +0100

    add runCatching to InAppChatSnackbar

commit c034ded345d2e3fe8039360fecf5afaba76af23a
Author: Matus Tokar <Matus.Tokar@infobip.com>
Date:   Wed Jan 21 11:03:14 2026 +0100

    renamed fields for expected plugin naming

commit fb297d6e6ccdadb2497bd7d1038d387ff6d46107
Author: Matus Tokar <Matus.Tokar@infobip.com>
Date:   Tue Jan 20 23:24:10 2026 +0100

    main fragment migrated to coordinator to fix snackbar swiping

commit 114e37b1a9ced4032f292f4d9be246c22ce0b6b8
Author: Matus Tokar <Matus.Tokar@infobip.com>
Date:   Tue Jan 20 17:33:35 2026 +0100

    main fragment migrated to coordinator layout

commit ef95dc2a0a32d14a7df0b3ffe3c2116d289d7f89
Author: Matus Tokar <Matus.Tokar@infobip.com>
Date:   Tue Jan 20 17:11:12 2026 +0100

    wip

commit f93d7fb51a72750c275024bda87e723bb96ad668
Author: Matus Tokar <Matus.Tokar@infobip.com>
Date:   Fri Jan 16 17:20:28 2026 +0100

    padding

commit 93d76c1a8e71fc7d051a9dbcce4495335e559d70
Author: Matus Tokar <Matus.Tokar@infobip.com>
Date:   Fri Jan 16 17:20:10 2026 +0100

    padding

commit 075a748d5e7d050dcece7f94e34e578460bf230f
Author: Matus Tokar <Matus.Tokar@infobip.com>
Date:   Fri Jan 16 17:09:51 2026 +0100

    fullscreen renaming

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values/attributes.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values/attributes.xml
@@ -47,19 +47,23 @@
         <attr name="ibChatNetworkConnectionErrorBackgroundColor" format="color|reference" />
         <attr name="ibChatNetworkConnectionErrorIcon" format="reference" />
         <attr name="ibChatNetworkConnectionErrorIconTint" format="color|reference" />
-        <attr name="ibChatNetworkConnectionErrorIconVisible" format="boolean" />
-        <attr name="ibChatErrorTitleText" format="string|reference" />
-        <attr name="ibChatErrorTitleTextColor" format="color|reference" />
-        <attr name="ibChatErrorTitleTextAppearance" format="reference" />
-        <attr name="ibChatErrorDescriptionText" format="string|reference" />
-        <attr name="ibChatErrorDescriptionTextColor" format="color|reference" />
-        <attr name="ibChatErrorDescriptionTextAppearance" format="reference" />
-        <attr name="ibChatErrorBackgroundColor" format="color|reference" />
-        <attr name="ibChatErrorIcon" format="reference" />
-        <attr name="ibChatErrorIconTint" format="color|reference" />
-        <attr name="ibChatErrorRefreshButtonText" format="string|reference" />
-        <attr name="ibChatErrorRefreshButtonTextColor" format="color|reference" />
-        <attr name="ibChatErrorRefreshButtonVisible" format="boolean" />
+        <attr name="ibChatSnackbarErrorTextColor" format="color|reference" />
+        <attr name="ibChatSnackbarErrorTextAppearance" format="reference" />
+        <attr name="ibChatSnackbarErrorBackgroundColor" format="color|reference" />
+        <attr name="ibChatSnackbarErrorIcon" format="reference" />
+        <attr name="ibChatSnackbarErrorIconTint" format="color|reference" />
+        <attr name="ibChatFullScreenErrorTitleText" format="string|reference"/>
+        <attr name="ibChatFullScreenErrorTitleTextColor" format="color|reference"/>
+        <attr name="ibChatFullScreenErrorTitleTextAppearance" format="reference"/>
+        <attr name="ibChatFullScreenErrorDescriptionText" format="string|reference"/>
+        <attr name="ibChatFullScreenErrorDescriptionTextColor" format="color|reference"/>
+        <attr name="ibChatFullScreenErrorDescriptionTextAppearance" format="reference"/>
+        <attr name="ibChatFullScreenErrorBackgroundColor" format="color|reference"/>
+        <attr name="ibChatFullScreenErrorIcon" format="reference"/>
+        <attr name="ibChatFullScreenErrorIconTint" format="color|reference"/>
+        <attr name="ibChatFullScreenErrorRefreshButtonText" format="string|reference"/>
+        <attr name="ibChatFullScreenErrorRefreshButtonTextColor" format="color|reference"/>
+        <attr name="ibChatFullScreenErrorRefreshButtonVisible" format="boolean"/>
     </declare-styleable>
 
     <declare-styleable name="InAppChatInputViewStyleable">
