--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_fragment_chat.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/layout/ib_fragment_chat.xml
@@ -6,11 +6,11 @@
   Copyright (c) 2016-2025 Infobip Limited
   Licensed under the Apache License, Version 2.0
 -->
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:animateLayoutChanges="true"
     android:background="?attr/colorSurface">
 
@@ -18,7 +18,6 @@
         android:id="@+id/ib_lc_appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
         android:theme="@style/IB_ChatDefaultTheme.AppBarOverlay">
 
         <com.google.android.material.appbar.MaterialToolbar
@@ -29,20 +28,26 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <org.infobip.mobile.messaging.chat.view.InAppChatView
-        android:id="@+id/ib_lc_chat"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/ib_lc_appbar"
-        app:layout_constraintBottom_toTopOf="@id/ib_lc_chat_input" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <org.infobip.mobile.messaging.chat.view.InAppChatInputView
-        android:id="@+id/ib_lc_chat_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        tools:visibility="visible"
-        android:minHeight="?attr/actionBarSize"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        <org.infobip.mobile.messaging.chat.view.InAppChatView
+            android:id="@+id/ib_lc_chat"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <org.infobip.mobile.messaging.chat.view.InAppChatInputView
+            android:id="@+id/ib_lc_chat_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:minHeight="?attr/actionBarSize" />
+
+    </LinearLayout>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
