Pull request #562: Mtokar MCA-5202 customization issues
Merge in MML/infobip-mobile-messaging-android from mtokar-MCA-5202-customization-issues to master

Squashed commit of the following:

commit 694978a38e3c228c593dc5bed070cc6ea2dbd0e6
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Feb 2 15:54:38 2026 +0100

    MCA-5202 Review fix

commit fa719141ea9a8efe59a3c55493273b80501c54ae
Author: Matus Tokar <Matus.Tokar@infobip.com>
Date:   Fri Jan 30 17:53:16 2026 +0100

    review fixes

commit bfbfa5e5b068f68ea1a9b6c4b16498b01918b5c8
Author: Matus Tokar <Matus.Tokar@infobip.com>
Date:   Thu Jan 29 15:44:28 2026 +0100

    remove lang setting

commit d86c5b85f16e57e03c8844029d6053fc50ea2a4b
Author: Matus Tokar <Matus.Tokar@infobip.com>
Date:   Thu Jan 29 15:43:33 2026 +0100

    renaming

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/res/values/styles.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/res/values/styles.xml
@@ -52,7 +52,7 @@
     <style name="IB.Chat" parent="IB">
         <item name="ibChatBackgroundColor">@color/ib_chat_background</item>
         <item name="ibChatProgressBarColor">@color/ib_chat_progress_bar</item>
-        <item name="ibChatNetworkConnectionErrorText">@string/ib_chat_no_connection</item>
+        <item name="ibChatNetworkConnectionErrorText">@null</item>
         <item name="ibChatNetworkConnectionErrorTextColor">@color/ib_chat_network_connection_error_text</item>
         <item name="ibChatNetworkConnectionErrorTextAppearance">@null</item>
         <item name="ibChatNetworkConnectionErrorBackgroundColor">@color/ib_chat_network_connection_error_background</item>
